--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TabPaneDemo</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
+    <string name="app_name">WagtailET</string>
+    <string name="button_find">    Find    </string>
+    <string name="button_replace_all">Replace All</string>
+    <string name="button_replace_find">Replace/Find</string>
+    <string name="cancel">Cancel</string>
+    <string name="hint_find">Find&#8230;</string>
+    <string name="hint_replace">Replace with&#8230;</string>
+    <string name="menu_item_close">Close</string>
+    <string name="menu_item_copy">Copy</string>
+    <string name="menu_item_cut">Cut</string>
+    <string name="menu_item_edit">Edit</string>
+    <string name="menu_item_file">File</string>
+    <string name="menu_item_new">New</string>
+    <string name="menu_item_open">Open&#8230;</string>
+    <string name="menu_item_paste">Paste</string>
+    <string name="menu_item_redo">Redo</string>
+    <string name="menu_item_save">Save</string>
+    <string name="menu_item_save_as">Save As&#8230;</string>
+    <string name="menu_item_undo">Undo</string><string name="ok">OK</string>
+    <string name="no">No</string>
+    <string name="replace_message">Do you want to replace it?</string>
+    <string name="untitled">Untitled</string>
+    <string name="yes">Yes</string>
 
 </resources>
