use an external filemanager.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,4 +26,10 @@
     <string name="untitled">Untitled</string>
     <string name="yes">Yes</string>
 
+    <string name="file_manager_desc">Open with an external file manager.</string>
+    <string name="oi_open_button">Open</string>
+    <string name="oi_open_title">Select file to open</string>
+    <string name="oi_pick_directory_button">Use this folder</string>
+    <string name="oi_pick_directory_title">Select a folder</string>
+    <string name="oi_no_filemanager_installed">No compatible file manager found</string>
 </resources>
