--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,10 +10,13 @@
     <string name="hint_replace">Replace with&#8230;</string>
     <string name="menu_item_close">Close</string>
     <string name="menu_item_copy">Copy</string>
+    <string name="menu_item_date">Date</string>
     <string name="menu_item_cut">Cut</string>
     <string name="menu_item_edit">Edit</string>
     <string name="menu_item_file">File</string>
+    <string name="menu_item_find_option">Find Option&#8230;</string>
     <string name="menu_item_find_replace">Find/Replace</string>
+    <string name="menu_item_intents">Intents</string>
     <string name="menu_item_new">New</string>
     <string name="menu_item_open">Open&#8230;</string>
     <string name="menu_item_paste">Paste</string>
@@ -21,7 +24,6 @@
     <string name="menu_item_save">Save</string>
     <string name="menu_item_save_as">Save As&#8230;</string>
     <string name="menu_item_undo">Undo</string><string name="ok">OK</string>
-    <string name="menu_item_find_option">Find Option&#8230;</string>
     <string name="no">No</string>
     <string name="replace_message">Do you want to replace it?</string>
     <string name="untitled">Untitled</string>
